tests/error/inout_errors/nonlinear_callable.err
Error: Invalid annotation (at $FILE:6:27)
  | 
4 | 
5 | @guppy.declare
6 | def foo(f: Function[[int @ owned], None]) -> None: ...
  |                            ^^^^^ Classical type `int` cannot be owned

Guppy compilation failed due to 1 previous error
